--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -10,5 +10,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: docker.intranet.gradata.com.au/gchq.github.io/stroom-k8s-operator-bundle
-  newTag: v0.0.15
+  newName: docker.intranet.gradata.com.au/gchq.github.io/stroom-k8s-operator
+  newTag: 0.0.15
