--- a/samples/autoscaler.yaml
+++ b/samples/autoscaler.yaml
@@ -2,7 +2,7 @@ apiVersion: stroom.gchq.github.io/v1
 kind: StroomTaskAutoscaler
 metadata:
   name: dev
-  namespace: stroom-7
+  namespace: stroom
 spec:
   stroomClusterRef:
     name: dev
