--- a/samples/database-server.yaml
+++ b/samples/database-server.yaml
@@ -2,22 +2,22 @@ apiVersion: stroom.gchq.github.io/v1
 kind: DatabaseServer
 metadata:
   name: dev
-  namespace: stroom-7
+  namespace: stroom
 spec:
   image:
     repository: mysql/mysql-server
-    tag: 8.0.23
+    tag: 8.0.25
   databaseNames:
     - stroom
     - stats
   additionalConfig: []
   resources:
     requests:
-      cpu: 100m
-      memory: 100Mi
-    limits:
       cpu: 500m
-      memory: 500Mi
+      memory: 1Gi
+    limits:
+      cpu: 2000m
+      memory: 2Gi
   volumeClaim:
     volumeName: stroom-db
     accessModes:
@@ -25,9 +25,9 @@ spec:
     storageClassName: ""
     resources:
       requests:
-        storage: 100Mi
-      limits:
         storage: 200Mi
+      limits:
+        storage: 500Mi
   backup:
     schedule: "*/5 * * * *"
     databaseNames:
