--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/stroom.gchq.github.io_stroomclusters.yaml
 - bases/stroom.gchq.github.io_databaseservers.yaml
 - bases/stroom.gchq.github.io_stroomtaskautoscalers.yaml
+- bases/stroom.gchq.github.io_databasebackups.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -13,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_stroomclusters.yaml
 #- patches/webhook_in_databaseservers.yaml
 #- patches/webhook_in_stroomtaskautoscalers.yaml
+#- patches/webhook_in_databasebackups.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_stroomclusters.yaml
 #- patches/cainjection_in_databaseservers.yaml
 #- patches/cainjection_in_stroomtaskautoscalers.yaml
+#- patches/cainjection_in_databasebackups.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
